[gd_scene load_steps=7 format=3 uid="uid://b5emof6ifnn1b"]

[ext_resource type="Script" uid="uid://ceg77ipxfecm7" path="res://scripts/game.gd" id="1_78awf"]
[ext_resource type="Texture2D" uid="uid://cjbj3nabl4ten" path="res://assets/ground_grass_gen_01.png" id="2_s0nni"]
[ext_resource type="PackedScene" uid="uid://c3vx7tpfvoghg" path="res://scenes/Knight.tscn" id="3_aug50"]
[ext_resource type="PackedScene" uid="uid://lobo3u2qms33" path="res://scenes/Score.tscn" id="4_kiw3p"]
[ext_resource type="PackedScene" uid="uid://bm2fy1ljkhsif" path="res://scenes/Bomb.tscn" id="5_s0nni"]
[ext_resource type="PackedScene" uid="uid://c7307hm26vvmc" path="res://Librairie/Spawner.tscn" id="6_aug50"]

[node name="Game" type="Node2D"]
script = ExtResource("1_78awf")

[node name="Ground" type="Sprite2D" parent="."]
position = Vector2(598.438, 355.563)
scale = Vector2(1.17688, 0.696166)
texture = ExtResource("2_s0nni")

[node name="Knight" parent="." instance=ExtResource("3_aug50")]

[node name="Score" parent="." instance=ExtResource("4_kiw3p")]
top_level = true
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 964.0
offset_top = 26.0
offset_right = 964.0
offset_bottom = 26.208
grow_horizontal = 1
grow_vertical = 1

[node name="FruitTimer" type="Timer" parent="."]
wait_time = 0.404
autostart = true

[node name="BombSpawner" parent="." instance=ExtResource("6_aug50")]
scene = ExtResource("5_s0nni")

[connection signal="timeout" from="FruitTimer" to="." method="create_fruit"]
